done mobile menu

--- a/sourse/pug/blocks/headerBlock/_headerBlock.scss
+++ b/sourse/pug/blocks/headerBlock/_headerBlock.scss
@@ -2,7 +2,8 @@
 .headerBlock {
 	margin-bottom: 1px;
 	min-height: 100vh;
-	min-height: calc(var(--vh, 1vh) * 100);
+	// min-height: calc(var(--vh, 1vh) * 100);
+	min-height: 100vh;
 	// background-image: url(../img);
 	// background-color: #000000;
 
