--- a/sourse/pug/blocks/sContactMap/_sContactMap.scss
+++ b/sourse/pug/blocks/sContactMap/_sContactMap.scss
@@ -13,12 +13,26 @@
 	// 		margin-right: calc(16 * -1px);
 	// 	}
 	// }
+	&__map{
+		height: 360px;
+		position: relative;
+		@include media-breakpoint-down(md) {
+			margin-left: calc( -1 * #{$grid-gutter-width} / 2);
+			margin-right: calc( -1 * #{$grid-gutter-width} / 2);
+		}
+		#map{
+			width: 100%;
+			height: 100%;
+			@include a-cent;
+		}
+	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
 	@include media-breakpoint-up(sm) {}
 	@include media-breakpoint-between(md, xl) {}
 	@include media-breakpoint-only(xl) {}
+	@include media-breakpoint-down(xl) {}
 	@include media-breakpoint-down(xl) {}
 } // end.sContactMap
 
