--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -21,26 +21,26 @@ mixin top-nav()
 	// start top-nav
 	+b.top-nav.block-with-lazy
 		.container-fluid
-			.row
+			+e.row.row
 				.col-auto
 					+logo()
-				+e.col-main.col
-					.row
+				.col
+					.menu-mobile.menu-mobile--js
+						.menu-mobile__inner
+							+e.row-mobile.row
+								//- +e.col-main.col 
+								.col-lg-auto
+										+mnu()
+								.col-lg.order-lg-0.order-last
+									+search()
+								//- .col
 
-						.col-auto
-							.menu-mobile.menu-mobile--js
-								+menu-toggle()
-								+mnu()
-						.col
-							+search()
-				//- .col
-
-				.col-auto
-					a(href="mailto:info@ddvb.ru") info@ddvb.ru 
-				.col-auto
-					+soc
-				.col-auto
-					+e.btn(href="#") Оставить заявку
+								+e.col-mail.col-lg-auto
+									a(href="mailto:info@ddvb.ru") info@ddvb.ru 
+								.col-lg-auto.order-lg-last
+									+e.btn(href="#") Оставить заявку
+								.col-lg-auto
+									+soc
 				.col-auto.d-lg-none
 					+menu-toggle()
 	// end top-nav
