--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -620,6 +620,11 @@ iframe {
 			position: relative;
 			z-index: 5;
 			padding-left: 18px;
+			padding-right: 40px;
+			@include media-breakpoint-down(lg){
+				background: #F2F2F2;
+				border-color: #F2F2F2;
+			}
 		}
 		&__btn{
 			position: absolute;
@@ -627,6 +632,10 @@ iframe {
 			// font-size: 24px;
 			@extend .btn;
 			padding: 0;
+			@include media-breakpoint-down(lg){
+					right: 15px;
+					z-index: 6;
+			}
 			.icon{
 				font-size: 24px;
 				fill: none;
@@ -642,10 +651,13 @@ iframe {
 			}
 		}
 		&__hidden-block{
-			transform-origin: left;
-			transform: translateX( var(--toggle, -100%));
-			opacity:  var(--toggle, 0);
-			visibility: var(--toggle, hidden);
+			@include media-breakpoint-up(lg){
+
+				transform-origin: left;
+				transform: translateX( var(--toggle, -100%));
+				opacity:  var(--toggle, 0);
+				visibility: var(--toggle, hidden);
+			}
 			@include mt;
 			&.active{
 				--toggle:  ' ';
@@ -655,13 +667,14 @@ iframe {
 
 	.search-result{
 		position: absolute;
-		left: calc(var(--bs-gutter-x) / 2);
+		left: calc(var(--bs-gutter-x) + 60px);
 		top: 100%;
 		width: 200%;
 		max-width: rem(962);
 		background: #FFFFFF;
 		filter: drop-shadow(0px 2px 8px rgba(131, 127, 127, 0.15));
 		padding: rem(16) rem(40);
+		// display: none !important;
 		&__group{
 			padding-top: 16px;
 			padding-bottom: 16px;
@@ -705,6 +718,33 @@ iframe {
 			}
 			h2{
 				font-size: 18px;
+			}
+		}
+	}
+
+	.more-link{
+		display: inline-flex;
+		position: relative;
+		align-items: center;
+		margin-top: 16px;
+		&__btn{
+			@extend .btn, .btn-primary;
+			width: 32px;
+			height: 32px;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			padding: 0;
+			margin-right: 10px;
+			&::before{
+				content: '';
+				@include a-cent;
+			}
+			.icon{
+				font-size: 16px;
+				fill: none;
+				stroke: currentColor;
+				stroke-width: .8px;
 			}
 		}
 	}
