--- a/sourse/pug/pages/09-about-company-2.pug
+++ b/sourse/pug/pages/09-about-company-2.pug
@@ -24,6 +24,8 @@ block pagecontent
 	+sHistory({
 		ad: false
 	})
+		+sHistoryText('Компания была основана в&nbsp;1993 году Леонидом Фейгиным и&nbsp;Дмитрием Перышковым в&nbsp;качестве дизайн-студии, но&nbsp;уже в&nbsp;скором времени успешно трансформировалась в&nbsp;полносервисное брендинговое агентство. Мы&nbsp;сыграли заметную роль в&nbsp;развитии индустрии брендинга в&nbsp;России, и&nbsp;продолжаем оставаться драйверами развития отрасли. На&nbsp;протяжении последних десятилетий мы&nbsp;работаем с&nbsp;лидерами российской экономики: бюджет наших клиентов формирует&nbsp;10% доходной части бюджета Российской Федерации.', 'Особая гордость&nbsp;&mdash; это команда, которая объединяет более 40&nbsp;сильных и&nbsp;амбициозных экспертов в&nbsp;области стратегии, дизайна и&nbsp;коммуникации. Это позволяет создавать нам разные брендинговые проекты: продуктовые, корпоративные, HR, территориальные и&nbsp;др.', 'DDVB входит в&nbsp;Ассоциацию брендинговых агентств России, регулярно получает призы на&nbsp;российских и&nbsp;международных фестивалях. Наши специалисты делятся опытом в&nbsp;ведущих учебных заведениях страны, входят в&nbsp;состав жюри, разрабатывают новые подходы в&nbsp;создании брендинга.')
+		+downloadLink('Скачать презентацию (PDF)')
 	+sAwards()
 	+sOurSpec()
 	+footer()
