--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -486,6 +486,7 @@
 
 .main-slider {
 	margin-bottom: rem(40 - 16);
+	max-width: rem(1680);
 	@include media-breakpoint-up(lg) {
 		margin-bottom: rem(80 - 17.5);
 	}
