--- a/sourse/pug/blocks/sCard/_sCard.scss
+++ b/sourse/pug/blocks/sCard/_sCard.scss
@@ -41,6 +41,7 @@
 	position: relative;
 	margin-left: calc(var(--bs-gutter-x) * -1);
 	margin-right: calc(var(--bs-gutter-x) * -1);
+	
 	// margin-bottom: rem(24);
 	@include media-breakpoint-up(md) {
 		// color: $white;
@@ -73,6 +74,7 @@
 		}
 	}
 	picture {
+		max-height: 768px;
 		@include block(360, 458);
 		@include media-breakpoint-between(sm, md) {
 			--ratio: 300/360;
@@ -85,6 +87,7 @@
 	}
 	&--horizontal {
 		picture {
+			max-height: 576px;
 			@include media-breakpoint-up(md) {
 				--ratio: 576/1232;
 			}
