--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -504,14 +504,15 @@ iframe {
 	max-width: 100%;
 	margin-left: auto;
 	margin-right: auto;
-	padding-left: rem(16);
-	padding-right: rem(16);
+
+	--x: #{rem(16)};
 	@include media-breakpoint-up(md) {
-		padding-left: rem(24);
-		padding-right: rem(24);
+		--x: #{rem(24)};
 	}
+	padding-left: var(--x);
+	padding-right: var(--x);
 	@include media-breakpoint-up(xl) {
-		max-width: 1280px;
+		max-width: calc(1680px + var(--x) * 2);
 	}
 }
 .btn {
