--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -95,6 +95,10 @@
 	font-size:math.div(14,10)*1rem;
 	width: math.div(18,14)*1em;
 }
+.icon-required {
+	font-size:math.div(6,10)*1rem;
+	width: math.div(6,6)*1em;
+}
 .icon-search {
 	font-size:math.div(24,10)*1rem;
 	width: math.div(24,24)*1em;
