--- a/sourse/pug/blocks/sHistory/_sHistory.pug
+++ b/sourse/pug/blocks/sHistory/_sHistory.pug
@@ -4,7 +4,7 @@ mixin sHistoryText(...texts)
 
 mixin sHistory(data)
 	// start sHistory
-	+b.SECTION.sHistory.section#sHistory&attributes(attributes)
+	+b.sHistory.section#sHistory&attributes(attributes)
 		.container
 			if data.ad
 				+b.head-wrapper
