--- a/sourse/pug/blocks/sContent/_sContent.pug
+++ b/sourse/pug/blocks/sContent/_sContent.pug
@@ -68,7 +68,7 @@ mixin sContent()
 					+arrow
 					.swiper-pagination
 			.video-wrrpaer 
-				iframe(src='https://www.youtube.com/embed/L_LUpnjgPso' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+				iframe(src='https://www.youtube.com/embed/L_LUpnjgPso' title='YouTube video player' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 			+b.share
 				span Поделиться
 				+soc()
