--- a/sourse/pug/blocks/sServiceHead/_sServiceHead.scss
+++ b/sourse/pug/blocks/sServiceHead/_sServiceHead.scss
@@ -52,6 +52,8 @@
 		}
 	}
 	&--for-what {
+		position: relative;
+		z-index: 5;
 		padding-top: rem(32);
 		@include media-breakpoint-up(lg) {
 			padding-top: rem(80);
