--- a/sourse/pug/blocks/sVideo/_sVideo.pug
+++ b/sourse/pug/blocks/sVideo/_sVideo.pug
@@ -6,5 +6,5 @@ mixin sVideo(data)
 			p Иллюстрации&nbsp;&mdash; детально проработанные&nbsp;&mdash; в&nbsp;связке с&nbsp;логотипом акцентуализируют коммуникацию. Их&nbsp;взаимодействие с&nbsp;фирменным стилем универсально, и&nbsp;при необходимости, взаимозаменяемо.
 		.container-wide
 			+b.video-wrrpaer
-				iframe(src='https://www.youtube.com/embed/L_LUpnjgPso' title='YouTube video player' frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+				iframe(src='https://www.youtube.com/embed/L_LUpnjgPso' title='YouTube video player' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 	// end sVideo
