--- a/sourse/pug/blocks/sCard/_sCard.pug
+++ b/sourse/pug/blocks/sCard/_sCard.pug
@@ -1,6 +1,6 @@
 mixin sCard(btn, preloader)
 	// start sCard
-	+b.sCard.section#sCard&attributes(attributes)
+	+b.sCard.section&attributes(attributes)
 		.container-wide
 			.row
 				block
