--- a/sourse/pug/blocks/sContactMap/_sContactMap.pug
+++ b/sourse/pug/blocks/sContactMap/_sContactMap.pug
@@ -5,7 +5,7 @@ mixin sContactMap(data)
 			+e.map
 				#map( data-mark="img/svg/map-marker.svg" )
 			//- <div id="map"style="width:100%; height:360px"></div>
-			<script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey=<ваш API-ключ>" type="text/javascript"></script>
+			<script src="https://api-maps.yandex.ru/2.0/?load=package.standard,package.geoObjects&amp;lang=ru-RU&amp;apikey=" type="text/javascript"></script>
 			script.
 				const map = document.querySelector('#map');
 
