--- a/sourse/pug/blocks/sServiceHead/_sServiceHead.pug
+++ b/sourse/pug/blocks/sServiceHead/_sServiceHead.pug
@@ -23,7 +23,7 @@ mixin serviceDropdown()
 
 mixin sServiceHead(data)
 	// start sServiceHead
-	+b.sServiceHead.section#sServiceHead&attributes(attributes)
+	+b.sServiceHead.section&attributes(attributes)
 		.container
 			.row
 				block
