--- a/sourse/pug/blocks/form-wrap/form-wrap.pug
+++ b/sourse/pug/blocks/form-wrap/form-wrap.pug
@@ -74,6 +74,5 @@ mixin add-file(n)
 
 
 mixin policy()
-	+e.policy
-		+in-c()(checked)
-			+e.SMALL.text.text-secondary Согласен на обработку и хранение моих персональных данных в соответствии с условиями
+	+e.policy.d-block.d-lg-none
+		+e.SMALL.text Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь #[a(href="#") с политикой конфиденциальности]
