--- a/sourse/pug/blocks/modal/_modal.pug
+++ b/sourse/pug/blocks/modal/_modal.pug
@@ -39,5 +39,6 @@ mixin modal()
 				+e.input-wrap.form-group
 					+in-c('checkbox', 'Тендер')
 				+e.BUTTON.btn.btn(type="submit") Оставить заявку
+				+policy()
 	// #modal-call
 	// end modals
