--- a/sourse/pug/pages/09-about-company-5.pug
+++ b/sourse/pug/pages/09-about-company-5.pug
@@ -22,6 +22,7 @@ block pagecontent
 	//- +mob-mnu()
 	+top-nav()
 	+page-head(title)
+		+breadcrumb('Главная','О компании', title)
 	+sHistory({
 		ad: true
 	})
