--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -1,8 +1,8 @@
 .main-page {
 	.top-nav {
-		position: absolute;
 		@include media-breakpoint-up(lg) {
-			background-color: #fff;
+			position: absolute;
+			background-color: transparent;
 		}
 	}
 }
@@ -16,8 +16,20 @@
 	.row{
 		align-items: center;
 	} 
-	padding-top: 1rem;
-	padding-bottom: 1rem;
+	@include media-breakpoint-down(md) {
+		.container-fluid{
+			padding-left: 0;
+			padding-right: 0;
+		}
+		position: fixed;
+	}
+	@include media-breakpoint-up(sm) {
+
+		padding-top: .8rem;
+		padding-bottom: .8rem;
+	}
+	padding-top: .2rem;
+	padding-bottom: .2rem;
 	@include media-breakpoint-down(lg) {
 		background-color: #fff;
 	}
@@ -89,7 +101,13 @@
 
 	@include media-breakpoint-down(md) {}
 
-	@include media-breakpoint-down(sm) {}
+	@include media-breakpoint-down(sm) {
+		.logo-link{
+			display: inline-block;
+			svg{
+			width: 32px;
+		}}
+	}
 
 	@include media-breakpoint-down(xs) {}
 }
