--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -19,9 +19,9 @@ block pagecontent
 	+top-nav()
 	//- +page-head-slider(`Valio. Clean design for &laquo;Сlean label&raquo;`, 'Потребительский брендинг', 'page-head-bg-1')
 	+mainSlider()
+		+mainSliderItem('slide-lg', 'slide-sm', 'Valio. Clean design for &laquo;Сlean label&raquo; dsasdasdasd', 'Потребительский брендинг')
 		+mainSliderItem('slide-lg', 'slide-sm', 'Valio. Clean design for &laquo;Сlean label&raquo;', 'Потребительский брендинг')
-		+mainSliderItem('slide-lg', 'slide-sm', 'Valio. Clean design for &laquo;Сlean label&raquo;', 'Потребительский брендинг')
-		+mainSliderItem('slide-lg', 'slide-sm', 'Valio. Clean design for &laquo;Сlean label&raquo;', 'Потребительский брендинг')
+		+mainSliderItem('slide-lg', 'slide-sm', 'Valio. Clean design for &laquo;Сlean label&raquo; sadsada', 'Потребительский брендинг dasdasdasd')
 	+sServiceHead()
 		+servicesGoods('5768', 'выполненных проектов')
 		+servicesGoods('668', 'довольных клиентов')
