--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -576,6 +576,7 @@ iframe {
 		height: 100%;
 		background-color: $primary;
 	}
+	color: $body-color;
 	&:hover {
 		color: $body-color;
 		&::before {
