--- a/sourse/pug/blocks/sHistory/_sHistory.pug
+++ b/sourse/pug/blocks/sHistory/_sHistory.pug
@@ -26,12 +26,12 @@ mixin sHistory(data)
 						.col-lg-6
 							+e.slider--js.swiper&attributes(attributes)
 								.swiper-wrapper
-									+e.slide.swiper-slide.wow.animate__animated.animate__fadeIn.animate__infinite.animate__slower-6s
+									+e.slide.swiper-slide
 										+pic('sHistory-bg', '', 0)
-									+e.slide.swiper-slide.wow.animate__animated.animate__fadeIn.animate__infinite.animate__slower-6s
-										+pic('sHistory-bg', '', 0)
-									+e.slide.swiper-slide.wow.animate__animated.animate__fadeIn.animate__infinite.animate__slower-6s
-										+pic('sHistory-bg', '', 0)
+									+e.slide.swiper-slide
+										+pic('ourSpec-card-bg-2', '', 0)
+									+e.slide.swiper-slide
+										+pic('ourSpec-card-bg-1', '', 0)
 			block
 	// end sHistory
 	
