--- a/sourse/pug/pages/layout/js-css.pug
+++ b/sourse/pug/pages/layout/js-css.pug
@@ -1,5 +1,6 @@
 mixin allcss() 
 	link(href="libs/swiper/swiper.min.css", rel="stylesheet")
+	link(href="libs/swiper/swiper-bundle.min.css", rel="stylesheet")
 	link(href="libs/@fancyapps/ui/fancybox.css", rel="stylesheet")
 	link(href="libs/animate.css/animate.min.css", rel="stylesheet")
 	link(href="css/main.min.css", rel="stylesheet")
@@ -7,7 +8,7 @@ mixin allcss()
 mixin allcjs() 
 	script(src="libs/jquery/jquery.min.js")
 	script(src="libs/@fancyapps/ui/fancybox.umd.js") 
-	script(src="libs/swiper/swiper-bundle.min.js")  
+	script(src="libs/swiper/swiper-bundle.min.js")
 	script(src="libs/inputmask/inputmask.min.js") 
 	script(src="libs/wowjs/wow.min.js")
 	script(src="js/common.js")
