--- a/sourse/pug/blocks/sHistory/_sHistory.pug
+++ b/sourse/pug/blocks/sHistory/_sHistory.pug
@@ -28,10 +28,10 @@ mixin sHistory(data)
 								.swiper-wrapper
 									+e.slide.swiper-slide
 										+pic('sHistory-bg', '', 0)
+									+e.slide.swiper-slide(style)
+										+pic('sHistory-bg', '', 0)
 									+e.slide.swiper-slide
-										+pic('ourSpec-card-bg-2', '', 0)
-									+e.slide.swiper-slide
-										+pic('ourSpec-card-bg-1', '', 0)
+										+pic('sHistory-bg', '', 0)
 			block
 	// end sHistory
 	
