edit content page

--- a/sourse/pug/pages/18-contentPage-2.pug
+++ b/sourse/pug/pages/18-contentPage-2.pug
@@ -4,7 +4,7 @@ extends layout/main.pug
 include ../blocks/sContent/_sContent.pug
 
 block variables
-	- let  mainPage= '' 
+	- let  mainPage= 'content' 
 	- let  bg= null
 
 block title
