--- a/sourse/pug/blocks/sContent/_sContent.pug
+++ b/sourse/pug/blocks/sContent/_sContent.pug
@@ -73,7 +73,7 @@ mixin sContent()
 				span Поделиться
 				+soc()
 					+item-sos("twitter", a='#')
-					+item-sos("facebook-stroke", a='#')
+					+item-sos("facebook", a='#')
 					+item-sos("vkontakte", a='#')
 	// end sContent
 
