add 14-search-4 page-404 and several edits

--- a/sourse/pug/blocks/form-wrap/form-wrap.pug
+++ b/sourse/pug/blocks/form-wrap/form-wrap.pug
@@ -74,5 +74,5 @@ mixin add-file(n)
 
 
 mixin policy()
-	+e.policy.d-block.d-lg-none
+	+e.policy
 		+e.SMALL.text Нажимая на кнопку, вы даете согласие на обработку персональных данных и соглашаетесь #[a(href="#") с политикой конфиденциальности]
