--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -39,7 +39,7 @@ mixin servicesList()
 			block
 
 mixin servicesDescription(text)
-	.col-desc.col-12
+	.col-12
 		+b.P.services-description-text!= text
 
 mixin servicesGoods(num, text)
