--- a/sourse/pug/blocks/sCard/_sCard.scss
+++ b/sourse/pug/blocks/sCard/_sCard.scss
@@ -49,7 +49,7 @@
 				}
 			}
 			&__content {
-				max-width: rem(300);
+				// max-width: rem(300);
 				@include media-breakpoint-down(lg) { 
 					top: auto;
 					bottom: rem(23);
@@ -104,7 +104,7 @@
 		top: rem(40);
 		left: rem(16);
 		z-index: 1;
-		max-width: rem(328);
+		// max-width: rem(328);
 		@include media-breakpoint-up(lg) {
 			left: rem(64);
 			top: rem(64);
@@ -156,7 +156,9 @@
 	}
 	&--search {
 		h2 {
-			font-size: $h6-font-size!important;
+			@include media-breakpoint-up(lg) {
+				font-size: $h6-font-size!important;
+			}
 		}
 		span {
 			font-size: rem(16);
