--- a/sourse/pug/blocks/sHistory/_sHistory.scss
+++ b/sourse/pug/blocks/sHistory/_sHistory.scss
@@ -28,6 +28,10 @@
 .head-wrapper {
 	background-color: $primary;
 	margin-bottom: rem(32);
+	@include media-breakpoint-down(sm) {
+		margin-left: -16px;
+		margin-right: -16px;
+	}
 	@include media-breakpoint-up(lg) {
 		margin-bottom: rem(48);
 	}
