--- a/sourse/pug/pages/03-Service-2.pug
+++ b/sourse/pug/pages/03-Service-2.pug
@@ -26,13 +26,13 @@ block pagecontent
 	+sServiceHead()
 		+servicesList()
 			+servicesItem('Стратегия')
-			+servicesItem('Задача')
-			+servicesItem('Решение')
+			+servicesItem('Корпоративный брендинг')
+			+servicesItem('Продвижение')
 		+servicesDescription("Разработка системы визуальной коммуникации и&nbsp;архитектуры бренда корпоративной социальной программы Металлоинвеста")
 		+ddGroup()
-			+ddGroupItem('Ситуация', '', 'Корпоративная социальная программа &laquo;Вместе&raquo; реализуется Металлоинвестом и&nbsp;направлена на&nbsp;создание условий для развития регионов присутствия.')
-			+ddGroupItem('Ситуация', '', 'Разработать архитектуру и&nbsp;гибкую систему визуальной коммуникации для разных типов носителей. В&nbsp;едином фирменном стиле дифференцировать')
-			+ddGroupItem('Ситуация', '', '&laquo;Вместе &raquo;&nbsp;&mdash; строится будущее руками каждого, кому небезразлично настоящее. Инициативы граждан Металлоинвест реализует вместе с&nbsp;ними. Архитектура &laquo;Вместе&raquo; вмещает под своим зонтиком разные направления: &laquo;Вместе со&nbsp;спортом&raquo;, &laquo;Вместе с&nbsp;культурой&raquo;, &laquo;Вместе с&nbsp;призванием&raquo;')
+			+ddGroupItem('Ситуация', '', 'Корпоративная социальная программа «Вместе» реализуется Металлоинвестом и направлена на создание условий для развития регионов присутствия.  ')
+			+ddGroupItem('Задача', '', 'Разработать архитектуру и гибкую систему визуальной коммуникации для разных типов носителей. В едином фирменном стиле дифференцировать')
+			+ddGroupItem('Решение', '', '&laquo;Вместе &raquo;&nbsp;&mdash; строится будущее руками каждого, кому небезразлично настоящее. Инициативы граждан Металлоинвест реализует вместе с&nbsp;ними. Архитектура &laquo;Вместе&raquo; вмещает под своим зонтиком разные направления: &laquo;Вместе со&nbsp;спортом&raquo;, &laquo;Вместе с&nbsp;культурой&raquo;, &laquo;Вместе с&nbsp;призванием&raquo;')
 	+sCard(``)
 		.col-md-6
 			+cardItem('', '', 'card-bg-4.jpg')
