--- a/sourse/pug/pages/03-Service.pug
+++ b/sourse/pug/pages/03-Service.pug
@@ -7,7 +7,7 @@ include ../blocks/sVacAccardion/_sVacAccardion.pug
 include ../blocks/sCard/_sCard.pug
 
 block variables
-	- let  mainPage= '' 
+	- let  mainPage= null
 	- let  bg= '3-1-Service.jpg'
 
 block title
