--- a/sourse/pug/pages/layout/js-css.pug
+++ b/sourse/pug/pages/layout/js-css.pug
@@ -3,6 +3,8 @@ mixin allcss()
 	link(href="libs/swiper/swiper-bundle.min.css", rel="stylesheet")
 	link(href="libs/@fancyapps/ui/fancybox.css", rel="stylesheet")
 	link(href="libs/animate.css/animate.min.css", rel="stylesheet")
+	link(href="libs/filepond/filepond.min.css", rel="stylesheet")
+	link(href="libs/filepond-plugin-image-preview/filepond-plugin-image-preview.min.css", rel="stylesheet")
 	link(href="css/main.min.css", rel="stylesheet")
 
 mixin allcjs() 
@@ -11,4 +13,10 @@ mixin allcjs()
 	script(src="libs/swiper/swiper-bundle.min.js")
 	script(src="libs/inputmask/inputmask.min.js") 
 	script(src="libs/wowjs/wow.min.js")
+
+	script(  src="https://unpkg.com/filepond-plugin-file-encode/dist/filepond-plugin-file-encode.min.js") 
+	script(  src="https://unpkg.com/filepond-plugin-file-validate-size/dist/filepond-plugin-file-validate-size.min.js") 
+	script(  src="https://unpkg.com/filepond-plugin-image-exif-orientation/dist/filepond-plugin-image-exif-orientation.min.js") 
+	script(  src="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.min.js") 
+	script(  src="https://unpkg.com/filepond/dist/filepond.min.js") 
 	script(src="js/common.js")
