--- a/sourse/pug/blocks/sCard/_sCard.scss
+++ b/sourse/pug/blocks/sCard/_sCard.scss
@@ -50,6 +50,7 @@
 			}
 			&__content {
 				// max-width: rem(300);
+				max-width: calc(100% - 2rem);
 				@include media-breakpoint-down(lg) { 
 					top: auto;
 					bottom: rem(23);
