--- a/sourse/pug/blocks/sHistory/_sHistory.pug
+++ b/sourse/pug/blocks/sHistory/_sHistory.pug
@@ -1,12 +1,13 @@
 mixin sHistory-yell()
 	// start sHistory-yell
 	+b.head-wrapper
-		.row 
-			+e.col.col-lg-6
-				h2 Придаём брендам человеческое лицо,
-				p помогая им&nbsp;адаптироваться и&nbsp;процветать в&nbsp;мире множества взаимосвязей
-			.col-lg-6
-				+pic('sHistory-bg', '', 0)
+		.container
+			.row 
+				+e.col.col-lg-6
+					h2 Придаём брендам человеческое лицо,
+					p помогая им&nbsp;адаптироваться и&nbsp;процветать в&nbsp;мире множества взаимосвязей
+				.col-lg-6
+					+pic('sHistory-bg', '', 0)
 	// end sHistory-yell 
 
 mixin sHistoryText(...texts)
