--- a/sourse/pug/blocks/sTeam/_sTeam.pug
+++ b/sourse/pug/blocks/sTeam/_sTeam.pug
@@ -6,7 +6,9 @@ mixin sTeam(data)
 		.container
 			+b.section-title
 				if data.ad
-					+sHistory-yell
+		.container-wide
+				+sHistory-yell
+		.container.pb-3
 				.row 
 					.col 
 						p 
