--- a/sourse/pug/blocks/sVision/_sVision.pug
+++ b/sourse/pug/blocks/sVision/_sVision.pug
@@ -6,9 +6,11 @@ mixin sVision(data)
 		.container
 			+b.section-title.text-center
 				h2 Наше видение
-			if data.ad
+		if data.ad
+			.container-wide
 				.sHistory-wrap 
 					+sHistory-yell
+		.container
 			.row
 				.col
 					.text-wrapper
@@ -23,34 +25,35 @@ mixin sVision(data)
 							| такой подход, мы&nbsp;создаём бренды, обладающие силой притяжения 
 							| и&nbsp;меняющие сознание, помогая бизнесу реализовать свой истинный потенциал.
 
-		.container-fluid 
+		.container-wide
 			.vision-item-wrapp
-				.row 
-					.col 
-						.span-wrapper 
-							span Наш подход
-				.row 
-					mixin vision-item(i, title, text)
+				.container
+					.row 
+						.col 
+							.span-wrapper 
+								span Наш подход
+					.row 
+						mixin vision-item(i, title, text)
+							.col-12.col-lg-6
+								+b(class = `vis-item-elem-${i}`).vision-item 
+									img(src=`img/svg/vision-item-${i}.svg`)
+									+e.text 
+										.h3= title 
+										p= text
+						+vision-item('1','Смотреть глубже, видеть шире','Мы думаем на 360, оценивая проблемы и возможности, с которыми сталкивается бизнес, не ограничиваясь брифом. Мы используем широкий аналитический и исследовательский инструментарий, базирующийся на социальной психологии и личностном анализе, позволяющий выявить истинные потребительские мотивации в контексте современного общества.')
+						//- +vision-item('2','Фокусироваться на важном','Мы уверены, что затрачиваемые на брендинг ресурсы принесут максимальную пользу при правильно выбранном фокусе. Концентрация на одной основополагающей яркой резонансной идее, заряженной эмоциями, позволяет формировать эффективные базисы для будущей коммуникации.')
 						.col-12.col-lg-6
-							+b(class = `vis-item-elem-${i}`).vision-item 
-								img(src=`img/svg/vision-item-${i}.svg`)
-								+e.text 
-									.h3= title 
-									p= text
-					+vision-item('1','Смотреть глубже, видеть шире','Мы думаем на 360, оценивая проблемы и возможности, с которыми сталкивается бизнес, не ограничиваясь брифом. Мы используем широкий аналитический и исследовательский инструментарий, базирующийся на социальной психологии и личностном анализе, позволяющий выявить истинные потребительские мотивации в контексте современного общества.')
-					//- +vision-item('2','Фокусироваться на важном','Мы уверены, что затрачиваемые на брендинг ресурсы принесут максимальную пользу при правильно выбранном фокусе. Концентрация на одной основополагающей яркой резонансной идее, заряженной эмоциями, позволяет формировать эффективные базисы для будущей коммуникации.')
-					.col-12.col-lg-6
-							+b(class = `vis-item-elem-2`).vision-item 
-								img(src=`img/svg/vision-item-2.svg`)
-								+e.text 
-									.h3 Фокусироваться на важном 
-									p
-										| Мы уверены, что затрачиваемые на брендинг ресурсы
-										| принесут максимальную пользу при правильно выбранном
-										| фокусе. Концентрация на одной основополагающей яркой
-										| резонансной идее, заряженной эмоциями, позволяет
-										strong  формировать эффективные базисы для будущей коммуникации.
-					+vision-item('3','Работать не для, а вместе с клиентом','Наша компания – это продолжение команды заказчика. Мы ценим и активно используем знания и творческую энергию клиента, максимально вовлекая его в процесс разработки креативных решений. ')
-					+vision-item('4','Работать для клиентов клиента','Мы заставляем бренды работать, создавая понятные для потребителя решения, которые вызывают интерес, доверие и приводят к ожидаемым, выгодным для бизнеса, реакциям.')
+								+b(class = `vis-item-elem-2`).vision-item 
+									img(src=`img/svg/vision-item-2.svg`)
+									+e.text 
+										.h3 Фокусироваться на важном 
+										p
+											| Мы уверены, что затрачиваемые на брендинг ресурсы
+											| принесут максимальную пользу при правильно выбранном
+											| фокусе. Концентрация на одной основополагающей яркой
+											| резонансной идее, заряженной эмоциями, позволяет
+											strong  формировать эффективные базисы для будущей коммуникации.
+						+vision-item('3','Работать не для, а вместе с клиентом','Наша компания – это продолжение команды заказчика. Мы ценим и активно используем знания и творческую энергию клиента, максимально вовлекая его в процесс разработки креативных решений. ')
+						+vision-item('4','Работать для клиентов клиента','Мы заставляем бренды работать, создавая понятные для потребителя решения, которые вызывают интерес, доверие и приводят к ожидаемым, выгодным для бизнеса, реакциям.')
 
 	// end sVisions
