--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -503,32 +503,38 @@ iframe {
 		@include media-breakpoint-up(lg) {
 			top: rem(-12);
 		}
-		left: calc(#{$grid-gutter-width} / 2);
+		// left: calc(#{$grid-gutter-width} / 2);
+		left: 0;
 		width: calc(100% - #{$grid-gutter-width});
+		width: 100%;
+		padding-left: var(--x2);
+	padding-right: var(--x2);
 		a {
 			font-size: rem(13);
 		}
 	}
 }
-
+.container{
+	@include media-breakpoint-up(md) {
+		max-width: 100% !important; 
+	padding-left: var(--x2);
+	padding-right: var(--x2);
+	}
+}
 .container-wide {
 	max-width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 
-	--x: #{rem(14)};
-	// @include media-breakpoint-up(1440px) {
-		@media (min-width: 1460px) {
-		--x: #{rem(24)};
-	}
-	padding-left: var(--x);
-	padding-right: var(--x);
+
+	padding-left: var(--x-wide);
+	padding-right: var(--x-wide);
 	@include media-breakpoint-up(md) {
-		max-width: calc(1280px + var(--x) * 2);
+		// max-width: calc(1280px + var(--x-wide) * 2);
 
 	}
 	@media (min-width: 1460px) {
-		max-width: calc(1920px + var(--x) * 2);
+		max-width: calc(1920px + var(--x-wide) * 2);
 	}
 }
 .btn {
