--- a/sourse/pug/blocks/sContent/_sContent.pug
+++ b/sourse/pug/blocks/sContent/_sContent.pug
@@ -12,7 +12,7 @@ mixin sContent()
 						li In&nbsp;finibus vitae lorem nec scelerisque
 						li Phasellus eu&nbsp;aliquam&nbsp;ex. Integer facilisis velit lacus, vel venenatis est aliquam sit amet
 				li Proin suscipit placerat turpis
-			+pic('content-img-1')
+			+pic('content-img-1', '', 0)
 			span Description
 			mixin articleTable(th1, th2, th3, th4)
 				+e.tableWrap
