--- a/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
+++ b/sourse/pug/blocks/mixin-wrap/mixin-wrap.pug
@@ -61,15 +61,16 @@ mixin mainSliderItem(imgLg, imgSm, title, text)
 	+e.slide.swiper-slide
 		+e.bg.bg-wrap
 			picture.picture-bg
-				//- slide-lg 
-				//- slide-sm 
-				source(type='image/avif' srcset=`img/@2x/avif/${imgLg}.avif` media='(min-width:576px)')
-				source(type='image/avif' srcset=`img/@2x/avif/${imgSm}.avif`)
-				source(type='image/webp' srcset=`img/@2x/webp/${imgLg}.webp` media='(min-width:576px)')
-				source(type='image/webp' srcset=`img/@2x/webp/${imgSm}.webp`)
-				source(type='image/jpg' srcset=`img/@2x/avif/${imgLg}.jpg` media='(min-width:576px)')
-				source(type='image/jpg' srcset=`img/@2x/avif/${imgSm}.jpg`)
-				img.object-fit-js(src=`img/@2x/${imgLg}.jpg` alt='' )
+			
+				// 1920
+				source(type='image/jpg' srcset=`img/@2x/${imgLg}.jpg` media='(min-width:1280px)')
+				// /1920
+				// 1280
+				source(type='image/jpg' srcset=`img/@2x/${imgSm}.jpg`  media='(min-width:992px)')
+				// /1280
+				// 768
+				img.object-fit-js(src=`img/@2x/${imgSm}.jpg` alt='' )
+				// /768
 		+e.inner
 			.container
 				+e.text-wrap
