--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -14,6 +14,9 @@
 	left: 0;
 	top: 0;
 	@include mt;
+	// @include media-breakpoint-up(lg){ 
+	// 	min-width: 1200px;
+	// }
 	&.fixed{
 		background-color: #fff !important;
 		padding-top: 0;
