--- a/sourse/pug/blocks/sCard/_sCard.scss
+++ b/sourse/pug/blocks/sCard/_sCard.scss
@@ -128,7 +128,7 @@
 		}
 	}
 	picture {
-		max-height: 768px;
+		// max-height: 768px;
 		@include block(360, 458);
 		@include media-breakpoint-between(sm, md) {
 			--ratio: 300/360;
