--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -804,3 +804,11 @@ iframe {
 	
 		display: none;
 	}
+
+	.main-slider{
+		video{
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
